# msci_esg

./: .gitignore  3q  OLD.cfg  README.md  proddeploy.sh  pyproject.toml  ratefinder.py  setup.cfg  setup.py  testdeploy.sh
TESTING/: README.md  requirements.txt  test.py
msci_efg_huntaj.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
msci_esg_huntaj.egg-info/: PKG-INFO  SOURCES.txt
py_msci_esg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
