[metadata]
# replace with your username:
name = msci-esg-huntaj
version = 0.0.1
author = Austin Hunt
author_email = huntaj@cofc.edu
description = A package for scraping content from the MSCI.com ESG Ratings Corporate Search Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6